--- a/public/html/main.html
+++ b/public/html/main.html
@@ -8,6 +8,13 @@
   <body>
     <header>
       <h1>⭐️속쓰리조⭐️</h1>
+      <button type="button" onclick="redirectToAuthPage()">로그인</button>
     </header>
+
+    <script>
+      function redirectToAuthPage() {
+        window.location.href = '/html/auth.html'; // auth.html 페이지로 이동
+      }
+    </script>
   </body>
 </html>
