--- a/public/html/main.html
+++ b/public/html/main.html
@@ -4,16 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOK_Three_JO</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #38495a;
+        color: #fff;
+      }
+
+      header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #2e3e4e;
+        padding: 10px;
+      }
+
+      h1 {
+        margin: 0;
+      }
+
+      button {
+        background-color: #2e3e4e;
+        color: #fff;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      main {
+        padding: 20px;
+      }
+
+      .board-list {
+        display: flex;
+        flex-direction: column; /* 세로 배치 설정 */
+        gap: 20px;
+      }
+      .board-box:hover {
+        background-color: #2e3e4e; /* 마우스를 올릴 때 배경색 변경 */
+        color: #fff; /* 마우스를 올릴 때 글자색 변경 */
+      }
+      .board-box {
+        width: 150px; /* 너비 조정 */
+        background-color: #5d7fa1;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        cursor: pointer;
+        padding: 10px; /* 여백 추가 */
+        cursor: pointer;
+        transition: background-color 0.3s, color 0.3s; /* 효과를 부드럽게 만들기 위한 transition 속성 */
+      }
+    </style>
   </head>
   <body>
     <header>
       <h1>⭐️속쓰리조⭐️</h1>
       <button type="button" onclick="redirectToAuthPage()">로그인</button>
     </header>
-
+    <main>
+      <div class="board-list">
+        <div class="board-box" onclick="redirectToBoardPage(1)">Board 1</div>
+        <div class="board-box" onclick="redirectToBoardPage(2)">Board 2</div>
+        <div class="board-box" onclick="redirectToBoardPage(3)">Board 3</div>
+        <!-- 추가적인 board-box 요소들을 여기에 추가할 수 있습니다 -->
+      </div>
+    </main>
     <script>
       function redirectToAuthPage() {
         window.location.href = '/html/auth.html'; // auth.html 페이지로 이동
+      }
+
+      function redirectToBoardPage(boardId) {
+        window.location.href = `/html/board.html?boardId=${boardId}`; // 해당 Board 페이지로 이동
       }
     </script>
   </body>
