--- a/public/html/mypage.html
+++ b/public/html/mypage.html
@@ -37,6 +37,29 @@
       main {
         padding: 20px;
       }
+
+      .board-list {
+        display: flex;
+        flex-direction: column; /* 세로 배치 설정 */
+        gap: 20px;
+        margin-top: 20px;
+      }
+      .board-box:hover {
+        background-color: #2e3e4e; /* 마우스를 올릴 때 배경색 변경 */
+        color: #fff; /* 마우스를 올릴 때 글자색 변경 */
+      }
+      .board-box {
+        width: 150px; /* 너비 조정 */
+        background-color: #5d7fa1;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        cursor: pointer;
+        padding: 10px; /* 여백 추가 */
+        cursor: pointer;
+        transition: background-color 0.3s, color 0.3s; /* 효과를 부드럽게 만들기 위한 transition 속성 */
+      }
     </style>
   </head>
   <body>
@@ -45,17 +68,15 @@
       <button type="button" onclick="redirectToAuthPage()">로그인</button>
     </header>
     <main>
-      <div class="board-list">
-        <div class="board-box" onclick="redirectToBoardPage(1)">Board 1</div>
-        <div class="board-box" onclick="redirectToBoardPage(2)">Board 2</div>
-        <div class="board-box" onclick="redirectToBoardPage(21)">Board 3</div>
+      <div class="board-list" id="myBoards">
+        <h1>My Boards</h1>
+        <!-- 추가적인 board-box 요소들을 여기에 추가할 수 있습니다 -->
+      </div>
+      <div class="board-list" id="invitedBoards">
+        <h1>Invited Boards</h1>
         <!-- 추가적인 board-box 요소들을 여기에 추가할 수 있습니다 -->
       </div>
     </main>
-    <script>
-      function redirectToAuthPage() {
-        window.location.href = '/html/auth.html'; // auth.html 페이지로 이동
-      }
-    </script>
+    <script src="../js/mypage.js"></script>
   </body>
 </html>
