feat: mypage에 나의 보드 출력

--- a/public/html/board.html
+++ b/public/html/board.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <div class="header-left">
-        <a href="/" class="home-button">
+        <a href="/html/mypage.html" class="home-button">
           <img src="../img/Thrillo.jpg" alt="Home" />
         </a>
       </div>
