--- a/public/html/mypage.html
+++ b/public/html/mypage.html
@@ -60,6 +60,72 @@
         cursor: pointer;
         transition: background-color 0.3s, color 0.3s; /* 효과를 부드럽게 만들기 위한 transition 속성 */
       }
+
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        overflow: auto;
+      }
+
+      .modal-content {
+        background-color: #5d7fa1;
+        margin: 10% auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        width: 50%;
+        position: relative;
+      }
+
+      .close {
+        position: absolute;
+        top: 0;
+        right: 10px;
+        font-size: 24px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      .modal-content h2 {
+        margin-top: 0;
+      }
+
+      #editButton,
+      #deleteButton {
+        background-color: #2e3e4e;
+        color: #fff;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 10px;
+      }
+
+      #editButton {
+        margin-right: 10px;
+      }
+
+      #editButton:hover,
+      #deleteButton:hover {
+        background-color: #38495a;
+      }
+
+      #headUserSpan,
+      #invitedUsersSpan,
+      #createdAtSpan {
+        font-weight: bold;
+      }
+
+      #invitedUsersSpan {
+        display: block;
+        margin-top: 5px;
+      }
     </style>
   </head>
   <body>
@@ -75,6 +141,17 @@
       <div class="board-list" id="invitedBoards">
         <h1>Invited Boards</h1>
         <!-- 추가적인 board-box 요소들을 여기에 추가할 수 있습니다 -->
+      </div>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close" onclick="closeModal()">&times;</span>
+          <h2>Board Details</h2>
+          <p>Head User: <span id="headUserSpan"></span></p>
+          <p>Invited Users: <span id="invitedUsersSpan"></span></p>
+          <p>Created At: <span id="createdAtSpan"></span></p>
+          <button id="editButton">Edit</button>
+          <button id="deleteButton">Delete</button>
+        </div>
       </div>
     </main>
     <script src="../js/mypage.js"></script>
