fix: 컬러데이터추가

--- a/public/html/mypage.html
+++ b/public/html/mypage.html
@@ -161,9 +161,14 @@
             <input type="text" id="boardNameInput" placeholder="Board Name" />
             <input type="text" id="boardDescInput" placeholder="Board Description" />
             <select id="boardColorSelect">
-              <option value="color1">Color 1</option>
+              <option value="blue">blue</option>
               <option value="color2">Color 2</option>
-              <!-- ... 기타 색상 옵션 ... -->
+              <option value="color3">Color 3</option>
+              <option value="color4">Color 4</option>
+              <option value="color5">Color 5</option>
+              <option value="color6">Color 6</option>
+              <option value="color7">Color 7</option>
+              <option value="color8">Color 8</option>
             </select>
             <button id="saveButton">Save</button>
             <button id="cancelButton">Cancel</button>
