column add DB and front test OK

--- a/public/html/board.html
+++ b/public/html/board.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/board.css" />
     <script defer src="../js/board.js"></script>
+    <script defer src="../js/card.js"></script>
     <title>Kanban Board</title>
   </head>
   <body>
@@ -48,7 +49,5 @@
       </div>
       <button id="columnBtn">new Column</button>
     </main>
-    <script src="../js/card.js"></script>
-    <script src="../js/board.js"></script>
   </body>
 </html>
