간단한 로그인, 회원가입

--- a/public/html/auth.html
+++ b/public/html/auth.html
@@ -16,11 +16,11 @@
         <div class="form-box-login">
           <h2>Login</h2>
           <form action="#" class="login-form">
-            <div class="input-box">
+            <div class="input-box" id="login-id">
               <input type="text" required />
               <label>Id</label>
             </div>
-            <div class="input-box">
+            <div class="input-box" id="login-password">
               <input type="password" required />
               <label>Password</label>
             </div>
@@ -34,15 +34,15 @@
         <div class="form-box-register">
           <h2>Register</h2>
           <form action="#" class="register-form">
-            <div class="input-box">
+            <div class="input-box" id="register-id">
               <input type="text" required />
               <label>Id</label>
             </div>
-            <div class="input-box">
+            <div class="input-box" id="register-password">
               <input type="password" required />
               <label>Password</label>
             </div>
-            <div class="input-box">
+            <div class="input-box" id="register-name">
               <input type="text" required />
               <label>Name</label>
             </div>
