--- a/public/html/mypage.html
+++ b/public/html/mypage.html
@@ -159,6 +159,14 @@
       .add-button:hover {
         background-color: #45617d;
       }
+      .modal-columns {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .modal-column {
+        width: 48%; /* 조절 가능한 값 */
+      }
     </style>
   </head>
   <body>
@@ -222,12 +230,19 @@
       <div id="inviteUserModal" class="modal">
         <div class="modal-content">
           <span class="close" onclick="closeInviteUserModal()">&times;</span>
-          <h2>사용자 초대</h2>
-          <div id="availableUsersList">
-            <!-- 가능한 사용자 목록이 여기에 표시됩니다 -->
-          </div>
-          <div id="invitedUsersList">
-            <!-- 초대된 사용자 목록이 여기에 표시됩니다 -->
+          <div class="modal-columns">
+            <div class="modal-column">
+              <h2>사용자 초대</h2>
+              <div id="availableUsersList">
+                <!-- 가능한 사용자 목록이 여기에 표시됩니다 -->
+              </div>
+            </div>
+            <div class="modal-column">
+              <h2>참여중인 사용자</h2>
+              <div id="invitedUsersList">
+                <!-- 초대된 사용자 목록이 여기에 표시됩니다 -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
