--- a/public/html/board.html
+++ b/public/html/board.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/board.css" />
     <script defer src="../js/board.js"></script>
     <script defer src="../js/card.js"></script>
+    <script defer src="../js/comment.js"></script>
     <title>Kanban Board</title>
   </head>
   <body>
