--- a/public/html/board.html
+++ b/public/html/board.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/board.css" />
     <script defer src="../js/board.js"></script>
-    <script defer src="../js/card.js"></script>
     <title>Kanban Board</title>
   </head>
   <body>
@@ -24,6 +23,8 @@
     </header>
     <main class="board">
       <button id="columnBtn">new Column</button>
+
+      <div class="card-list"></div>
     </main>
   </body>
 </html>
