--- a/public/html/main.html
+++ b/public/html/main.html
@@ -43,6 +43,7 @@
     <header>
       <h1>⭐️속쓰리조⭐️</h1>
       <button type="button" onclick="redirectToAuthPage()">로그인</button>
+      <!-- 로그인버튼사라지고 내정보버튼 -->
     </header>
     <main>
       <div class="board-list">
