feat : board.html 에 보드의 제목, 설명 렌더링

--- a/public/html/mypage.html
+++ b/public/html/mypage.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>⭐️속쓰리조⭐️</h1>
-      <button type="button" onclick="redirectToAuthPage()">로그인</button>
+      <button type="button" class="add-button" onclick="logOut()">로그아웃</button>
     </header>
     <main>
       <button id="addBoardButton" class="add-button">Add Board</button>
