--- a/public/html/myinfo.html
+++ b/public/html/myinfo.html
@@ -14,11 +14,50 @@
       </div>
     </header>
     <main>
-      <h2>Username</h2>
-      <h3>Change Id</h3>
-      <h3>Change password</h3>
-      <h3>Change username</h3>
-      <h2>Delete Account</h2>
+      <div class="wrapper"><h2 id="usernamePlaceholder"></h2></div>
+      <div class="wrapper">
+        <h4>Change Id</h4>
+        <div class="wrapper-content">
+          <button type="button" class="id" id="changeIdBtn">Change Id</button>
+          <div class="form" id="changeIdForm" style="display: none">
+            <form>
+              <input type="text" id="input-id" />
+              <button type="button" class="input-id">Change</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <h4>Change username</h4>
+        <div class="wrapper-content">
+          <button type="button" class="username" id="changeUsernameBtn">Change username</button>
+          <div class="form" id="changeUsernameForm" style="display: none">
+            <form>
+              <input type="text" id="input-username" />
+              <button type="button" class="input-username">Change</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <h4>Change password</h4>
+        <div class="wrapper-content">
+          <button type="button" class="password" id="changePasswordBtn">Change password</button>
+          <div class="form" id="changePasswordForm" style="display: none">
+            <form>
+              <input type="text" id="input-password" placeholder="password" />
+              <input type="text" id="input-confirmpassword" placeholder="confirmpassword" />
+              <button type="button" class="input-password">Change</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <h3>Delete Account</h3>
+        <div class="wrapper-content">
+          <button type="button" class="delete-account">Delete Account</button>
+        </div>
+      </div>
     </main>
     <script src="../js/myinfo.js"></script>
   </body>
