--- a/public/html/myinfo.html
+++ b/public/html/myinfo.html
@@ -52,12 +52,12 @@
           </div>
         </div>
       </div>
-      <div class="wrapper">
+      <!-- <div class="wrapper">
         <h3>Delete Account</h3>
         <div class="wrapper-content">
           <button type="button" class="delete-account">Delete Account</button>
         </div>
-      </div>
+      </div> -->
     </main>
     <script src="../js/myinfo.js"></script>
   </body>
