fix: 시작페이지변경

--- a/public/html/mypage.html
+++ b/public/html/mypage.html
@@ -39,9 +39,9 @@
             <input type="text" id="boardDescInput" placeholder="Board Description" />
             <select id="boardColorSelect">
               <option value="blue">blue</option>
-              <option value="color2">Color 2</option>
-              <option value="color3">Color 3</option>
-              <option value="color4">Color 4</option>
+              <option value="red">red</option>
+              <option value="green">green</option>
+              <option value="yellow">yellow</option>
             </select>
             <button id="saveButton">Save</button>
             <button id="cancelButton">Cancel</button>
@@ -56,9 +56,9 @@
           <input type="text" id="addBoardDescInput" placeholder="Board Description" />
           <select id="addBoardColorSelect">
             <option value="blue">blue</option>
-            <option value="color2">Color 2</option>
-            <option value="color3">Color 3</option>
-            <option value="color4">Color 4</option>
+            <option value="red">red</option>
+            <option value="green">green</option>
+            <option value="yellow">yellow</option>
           </select>
           <button id="addButton">추가</button>
           <button id="cancleButton">취소</button>
